--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -25,13 +25,6 @@ jobs:
       - name: Dump GitHub context
         run: echo '${{ toJSON(github) }}'
 
-      - run: mkdir -p path/to/artifact
-      - run: echo hello > path/to/artifact/world.txt
-      - uses: actions/upload-artifact@v3
-        with:
-          name: my-artifact
-          path: path/to/artifact/world.txt
-
       - name: Download artifact
         uses: dawidd6/action-download-artifact@v2
         with:
@@ -42,6 +35,16 @@ jobs:
         continue-on-error: true
 
 
+      - run: mkdir -p path/to/artifact
+      - run: echo hello > path/to/artifact/world.txt
+      - uses: actions/upload-artifact@v3
+        with:
+          name: my-artifact
+          path: path/to/artifact/world.txt
+
+
+
+
 
       - name: check artifact
-        run: ls -la
+        run: ls -laR
