--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -32,6 +32,7 @@ jobs:
           workflow: artifact.yml
           workflow_conclusion: 'success'
           name: my-artifact
+          pr: ${{github.event.pull_request.number}}
         continue-on-error: true
 
 
